--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: 'ZCOOL KuaiLe';
-    src: url('https://unpkg.com/zerolacqua-assets/fonts/zcool-happy.ttf');  
+    src: url('https://cdn.zerolacqua.top/fonts/zcool-happy.ttf');  
   }
   
 body {
