--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,14 +1,28 @@
-@font-face{
-    font-family: 'ZCOOL KuaiLe';
-    src: url('https://cdn.zerolacqua.top/fonts/zcool-happy.ttf');  
-  }
-  
-body {
-    --md-text-font: 'ZCOOL KuaiLe';
+@font-face {
+	font-family: 'ZCOOL KuaiLe';
+	src: url('https://cdn.zerolacqua.top/fonts/zcool-happy.ttf');
 }
 
-.md-content{
-    font-family: 'Noto Serif Simplified Chinese';
+/* :root {
+	--md-text-font: 'ZCOOL KuaiLe';
+}
+
+.md-container {
+	--md-text-font: 'Noto Serif Simplified Chinese';
+} */
+
+
+.md-typeset h1 {
+	font-family: 'ZCOOL KuaiLe';
+}
+
+nav {
+	font-family: 'ZCOOL KuaiLe';
+}
+
+.md-search__input {
+	font-family: 'ZCOOL KuaiLe';
+
 }
 
 /* code{
